WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 115899
[CSSRegions] Fix offsetLeft / offsetTop for elements inside named flow
https://bugs.webkit.org/show_bug.cgi?id=115899
Summary
[CSSRegions] Fix offsetLeft / offsetTop for elements inside named flow
Radu Stavila
Reported
2013-05-10 04:50:20 PDT
If an element in a named flow thread has no offsetParent inside the named flow, its offsetParent will be the document's body (
http://dev.w3.org/csswg/css-regions/#cssomview-offset-attributes
). In this situation, the offsetLeft and offsetTop values are not correctly computed.
Attachments
Patch
(48.12 KB, patch)
2013-05-20 08:02 PDT
,
Radu Stavila
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radu Stavila
Comment 1
2013-05-10 04:55:28 PDT
Related to
https://bugs.webkit.org/show_bug.cgi?id=113276
Radu Stavila
Comment 2
2013-05-20 08:02:37 PDT
Created
attachment 202277
[details]
Patch
Dave Hyatt
Comment 3
2013-05-20 08:19:14 PDT
Comment on
attachment 202277
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2013-05-20 14:38:14 PDT
Comment on
attachment 202277
[details]
Patch Clearing flags on attachment: 202277 Committed
r150383
: <
http://trac.webkit.org/changeset/150383
>
WebKit Commit Bot
Comment 5
2013-05-20 14:38:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug