[CSSRegions] Fix offsetLeft / offsetTop for elements inside named flow https://bugs.webkit.org/show_bug.cgi?id=115899

Patch by Radu Stavila <stavila@adobe.com> on 2013-05-20
Reviewed by David Hyatt.

Source/WebCore:

Elements in named flows that have the body as their offsetParent, need to compute their
offsetLeft and offsetTop values relative to the body.

Tests: fast/regions/offsetLeft-offsetTop-in-multiple-regions.html
       fast/regions/offsetLeft-offsetTop-in-region-absolute-sticky-fixed.html
       fast/regions/offsetLeft-offsetTop-in-region-float-vert-rl.html
       fast/regions/offsetLeft-offsetTop-in-region-float.html
       fast/regions/offsetLeft-offsetTop-inlines-region-in-element.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::adjustedPositionRelativeToOffsetParent):
* rendering/RenderFlowThread.cpp:
(WebCore):
(WebCore::RenderFlowThread::adjustedPositionRelativeToOffsetParent):
* rendering/RenderFlowThread.h:

LayoutTests:

Added tests for the implementation of offsetLeft and offsetTop for objects inside named flows
for which the offsetParent is the body.

* fast/regions/offsetLeft-offsetTop-in-multiple-regions-expected.txt: Added.
* fast/regions/offsetLeft-offsetTop-in-multiple-regions.html: Added.
* fast/regions/offsetLeft-offsetTop-in-region-absolute-sticky-fixed-expected.txt: Added.
* fast/regions/offsetLeft-offsetTop-in-region-absolute-sticky-fixed.html: Added.
* fast/regions/offsetLeft-offsetTop-in-region-float-expected.txt: Added.
* fast/regions/offsetLeft-offsetTop-in-region-float-vert-rl-expected.txt: Added.
* fast/regions/offsetLeft-offsetTop-in-region-float-vert-rl.html: Added.
* fast/regions/offsetLeft-offsetTop-in-region-float.html: Added.
* fast/regions/offsetLeft-offsetTop-inlines-region-in-element-expected.txt: Added.
* fast/regions/offsetLeft-offsetTop-inlines-region-in-element.html: Added.

Canonical link: https://commits.webkit.org/134800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150383 268f45cc-cd09-0410-ab3c-d52691b4dbfc